--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="album"
-            type="com.northcoders.albumstore.model.AlbumDTO" />
+            type="com.northcoders.albumstore.model.Album" />
     </data>
 
     <androidx.cardview.widget.CardView
