--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -27,6 +27,14 @@
             android:layout_margin="10dp">
 
             <!-- TODO: Add album art -->
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/album_image_desc"
+                android:src="@drawable/baseline_library_music"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
                 android:id="@+id/album_title"
@@ -37,7 +45,7 @@
                 android:textAlignment="center"
                 android:textSize="12sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/image"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="spread_inside" />
@@ -53,8 +61,8 @@
                 android:textAlignment="center"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/album_title"
+                app:layout_constraintStart_toStartOf="@id/album_title"
                 app:layout_constraintTop_toBottomOf="@id/album_title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
