refactor: use `BindingAdapter` for artists string

--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -57,9 +57,9 @@
                 android:layout_below="@+id/album_title"
                 android:autoSizeTextType="uniform"
                 android:hint="@string/artist_hint"
-                android:text="@{album.artistString}"
                 android:textAlignment="center"
                 android:textSize="12sp"
+                android:text="@{album.artists}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/album_title"
                 app:layout_constraintStart_toStartOf="@id/album_title"
