--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -23,47 +23,73 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
+            android:layout_height="match_parent">
 
-            <!-- TODO: Add album art -->
             <ImageView
-                android:id="@+id/image"
-                android:layout_width="wrap_content"
+                android:id="@+id/album_art"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/album_image_desc"
-                android:src="@drawable/baseline_library_music"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <TextView
-                android:id="@+id/album_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="@string/album_title_hint"
-                android:text="@{album.title}"
-                android:textAlignment="center"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@id/image"
+                android:layout_margin="0dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/album_art_desc"
+                android:scaleType="fitCenter"
+                app:layout_constraintBottom_toTopOf="@id/album_info"
+                app:layout_constraintDimensionRatio="1"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="spread_inside" />
+                app:loadImage="@{album.albumArtUrl}" />
 
-            <TextView
-                android:id="@+id/artist_name"
+            <ImageView
+                android:id="@+id/icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/album_title"
-                android:autoSizeTextType="uniform"
-                android:hint="@string/artist_hint"
-                android:textAlignment="center"
-                android:textSize="12sp"
-                android:text="@{album.artists}"
+                android:layout_margin="5dp"
+                android:contentDescription="@string/album_image_desc"
+                android:src="@drawable/baseline_library_music"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/album_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/album_title"
-                app:layout_constraintStart_toStartOf="@id/album_title"
-                app:layout_constraintTop_toBottomOf="@id/album_title" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/album_art">
+
+                <TextView
+                    android:id="@+id/album_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/album_title_hint"
+                    android:text="@{album.title}"
+                    android:textAlignment="center"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="spread_inside" />
+
+                <TextView
+                    android:id="@+id/artist_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/album_title"
+                    android:autoSizeTextType="uniform"
+                    android:hint="@string/artist_hint"
+                    android:textAlignment="center"
+                    android:textSize="12sp"
+                    android:text="@{album.artists}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/album_title"
+                    app:layout_constraintStart_toStartOf="@id/album_title"
+                    app:layout_constraintTop_toBottomOf="@id/album_title" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
