feat(view): add a fallback album art

--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -31,8 +31,10 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="0dp"
                 android:adjustViewBounds="true"
+                android:background="@android:color/secondary_text_dark"
                 android:contentDescription="@string/album_art_desc"
                 android:scaleType="fitCenter"
+                app:fallbackImage="@{@drawable/baseline_audiotrack_white_transparent}"
                 app:layout_constraintBottom_toTopOf="@id/album_info"
                 app:layout_constraintDimensionRatio="1"
                 app:layout_constraintEnd_toEndOf="parent"
