--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="clickHandler"
+            type="com.northcoders.albumstore.ui.mainactivity.MainActivityClickHandlers" />
 
         <variable
             name="album"
@@ -15,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="2.5dp"
         android:backgroundTint="@color/material_dynamic_neutral90"
+        android:onClick="@{() -> clickHandler.onClickAlbum(album)}"
         android:elevation="10dp"
         app:cardCornerRadius="4dp"
         app:layout_constraintEnd_toEndOf="parent"
