feat(view): initial genre spinner

--- a/app/src/main/res/layout/activity_add_new_album.xml
+++ b/app/src/main/res/layout/activity_add_new_album.xml
@@ -75,7 +75,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/new_album_title" />
 
-        <EditText
+        <Spinner
             android:id="@+id/new_album_genre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -84,7 +84,6 @@
             android:hint="@string/album_genre_hint"
             android:importantForAutofill="no"
             android:inputType="text"
-            android:text="@={album.genre}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/new_album_artist" />
