--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -33,6 +33,7 @@
                 android:id="@+id/album_art"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:layout_constraintVertical_chainStyle="spread_inside"
                 android:layout_margin="0dp"
                 android:adjustViewBounds="true"
                 android:background="@android:color/secondary_text_dark"
@@ -78,20 +79,17 @@
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_chainStyle="spread_inside" />
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
                     android:id="@+id/artist_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/album_title"
                     android:autoSizeTextType="uniform"
                     android:hint="@string/artist_hint"
                     android:textAlignment="center"
                     android:textSize="12sp"
                     android:text="@{album.artists}"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/album_title"
                     app:layout_constraintStart_toStartOf="@id/album_title"
                     app:layout_constraintTop_toBottomOf="@id/album_title" />
