--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="clickHandler"
-            type="com.northcoders.albumstore.ui.mainactivity.MainActivityClickHandlers" />
+            type="com.northcoders.albumstore.ui.library.LibraryClickHandlers" />
 
         <variable
             name="album"
