--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,9 @@
         android:icon="@drawable/baseline_library_music"
         android:title="@string/menu_library_title" />
 
+    <item
+        android:id="@+id/nav_add_album"
+        android:icon="@drawable/baseline_add"
+        android:title="@string/nav_add_album_title" />
+
 </menu>
